<resources>
    <string name="app_name">Care india</string>
    <string name="login">Login</string>
    <string name="please_enter_email">Please enter email id</string>
    <string name="password">Password</string>
    <string name="btn_login">Login</string>
    <string name="signup">SignUp</string>
    <string name="create_new">Click here for register</string>
    <string name="act_login">Already have account? Log In</string>
    <string name="date_format">dd-mm-yyyy</string>
    <string name="select">Select</string>
    <string name="select_priority">Select Priority</string>
    <string name="save">Save</string>
    <string name="next">Next</string>
    <string name="please_specify">Please specify others</string>
    <string name="do_they_have_their_business_plan">Do they have their business plan?</string>
    <string name="what_is_the_range_of_investment_it_require">What is the range of investment it require (in thousands)?</string>
    <string name="are_they_ready_to_invest">Are they ready to invest?</string>
    <string name="how_much_you_will_invest">How much you will invest?</string>
    <string name="how_are_they_planning_their_investment">How are they planning their investment?</string>
    <string name="any_expected_support">Any expected support</string>
    <string name="are_you_interested_in_availing_loans_or_subsidies">Are you interested in availing loans or subsidies?</string>
    <string name="how_much_they_have_invested">How much they have invested?</string>
    <string name="what_kind_of_business_is_it">What kind of business is it?</string>
    <string name="is_the_business_registered">Is the business registered</string>
    <string name="amount_of_financial_assistance_required">Amount of financial assistance required?</string>
    <string name="Those_self_employed_require_any_support">Those Self employed require any support?</string>
    <string name="empty_email">Please enter Email ID</string>
    <string name="attendce_sestion_trckr"><![CDATA[Attendance & \nSesstion Tracker]]></string>
    <string name="q101_date_of_filling_the_form"><b>Q101</b> Date of filling the form</string>
    <string name="Name_of_CRP_filling_the_form"><b>Q102.</b> Name of CRP filling the form</string>
    <string name="Name_of_supervising_field_cordinator"><b>Q103.</b> Name of supervising Field Coordinator</string>
    <string name="Name_of_distric"><b>Q104.</b> Name of District</string>
    <string name="Name_of_zone"><b>Q105.</b> Name of Zone</string>
    <string name="Name_of_bbmp_ward"><b>Q106.</b> Name of BBMP Ward</string>
    <string name="Name_of_panchayat"><b>Q107.</b> Name of Panchayat</string>
    <string name="q108_name_of_locality"><b>Q108.</b> Name of Locality</string>
    <string name="community_dwcc"><b>Q111.</b> Community/DWCC</string>
    <string name="hh_name"><b>Q112.</b> Name of Head of the Household</string>
    <string name="hh_sex"><b>Q113.</b> Sex of the Head of the Household</string>
    <string name="total_adult"><b>Q201.</b> Total number of adult members in family (18 years and above)</string>
    <string name="adult_male"><b>Q201a.</b> Number of adult male members (18 years and above)</string>
    <string name="adult_female"><b>Q201b.</b> Number of adult female members (18 years and above)</string>
    <string name="adolescent_boys_girls"><b>Q202.</b> Total number of adolescent boys and girls (15–18 years)</string>
    <string name="adolescent_boys"><b>Q202a.</b> Number of adolescent boys between 15 to 18 years</string>
    <string name="adolescent_girls"><b>Q202b.</b> Number of adolescent girls between 15 to 18 years</string>
    <string name="total_children"><b>Q203.</b> Total number of children (below 15 years)</string>
    <string name="male_children"><b>Q203a.</b> Number of male children (below 15 years)</string>
    <string name="female_children"><b>Q203b.</b> Number of female children (below 15 years)</string>
    <string name="total_earning_member"><b>Q204.</b> Total number of earning members</string>
    <string name="male_earning_member"><b>Q204a.</b> Number of male earning members</string>
    <string name="female_earning_member"><b>Q204b.</b> Number of female earning members</string>
    <string name="type_of_dwelling"><b>Q301.</b> Type of dwelling</string>
    <string name="if_other_type_of_dwelling"><b>Q301a.</b> Please specify if other type of dwelling</string>
    <string name="is_your_dwelling_place_registered"><b>Q302.</b> Is your dwelling place registered?</string>
    <string name="hh_ration_card"><b>Q401.</b> Do your household have a Ration card?</string>
    <string name="if_other_ration"><b>Q401a.</b> Please specify if other ration card</string>
    <string name="cancel">Cancel</string>
    <string name="change_lives_save_lives">Change Lives Save lives</string>
    <string name="save_and_next"><![CDATA[Save & Next]]></string>
    <string name="type_here">Type here....</string>
    <string name="inner_details">Inner Details</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="account_information">Account Information</string>
    <string name="email">Email</string>
    <string name="details">Details</string>
    <string name="heart_attack_or_angina">Heart Attack or Angina</string>
    <string name="stroke">Stroke</string>
    <string name="perpheral_vascular_disease">Perpheral Vascular Disease</string>
    <string name="min_8_character_1_number_case_sensitive">(min. 8 character 1 number case- sensitive)</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="date_of_filling_the_form_profile"><b>Q101.</b> Date of filling the form</string>
    <string name="name_of_crp_filling"><b>Q102.</b> Name of CRP filling the form</string>
    <string name="name_of_supervising_care_india"><b>Q103.</b> Name of supervising CARE India staff</string>
    <string name="name_of_district"><b>Q104.</b> Name of District</string>
    <string name="name_of_zone"><b>Q105.</b> Name of Zone</string>
    <string name="name_of_bbmp_ward"><b>Q106.</b> Name of BBMP Ward</string>
    <string name="name_of_panchayat"><b>Q107.</b> Name of Panchayat</string>
    <string name="name_of_locality"><b>Q108.</b> Name of Locality</string>
    <string name="community_dwcc_initials"><b>Q111.</b> Community/DWCC Initials</string>
    <string name="collective_unique_id"><b>Q112.</b> Collective Unique ID</string>
    <string name="name_of_group_collective_sangha"><b>Q113.</b> Name of your Group/Collective/Sangha</string>
    <string name="date_of_formation_of_group"><b>Q114.</b> Date of formation of the group/collective</string>
    <string name="please_specify_others"><b>Q115a.</b> Please specify others</string>
    <string name="is_your_griup_registered"><b>Q116.</b> Is your group/collective registered?</string>
    <string name="please_specify_others_registered"><b>Q116a.</b> Please specify others</string>
    <string name="what_is_the_objective_of_group"><b>Q117.</b> What is the objective/purpose of the group</string>
    <string name="name_of_head_group"><b>Q201.</b> Name of the Head of the group/collective</string>
    <string name="sex_of_head_of_group"><b>Q202.</b> Sex of the Head of the group/collective</string>
    <string name="total_no_of_members_in_group"><b>Q203.</b> Total number of members in the group/collective</string>
    <string name="total_no_of_male_members_in_group"><b>Q203a.</b> Total number of male members in the group/collective</string>
    <string name="total_no_of_female_members_in_group"><b>Q203b.</b> Total number of female members in the group/collective</string>
    <string name="total_no_of_transgender_members_in_group"><b>Q203c.</b> Total number of transgender members in the group/collective</string>
    <string name="name_of_the_member"><b>Q204.</b> Name of the Member</string>
    <string name="individual_member_id"><b>Q204a.</b> Individual Member ID</string>
    <string name="sex_of_the_member"><b>Q204b.</b> Sex of the Member</string>
    <string name="age_of_the_member"><b>Q204c.</b> Age of the Member(in complete years)</string>
    <string name="contact_number"><b>Q204d.</b> Contact number/Alternate contact number</string>
    <string name="role_of_member_in_group"><b>Q204e.</b> Role/position of the member in the group</string>
    <string name="do_you_have_savings_bank_account"><b>Q204f.</b> Do you have savings bank account?</string>
    <string name="aadhar_no"><b>Q204g.</b> What is your Aadhar card no.?</string>
    <string name="validaadhar_no">valid Aadhar card no.</string>
    <string name="q301_what_is_the_tenure_of_the_president_office_bearer_in_complete_years"><b>Q301.</b> What is the tenure of the President/Office bearer (in complete years)</string>
    <string name="q302_has_there_been_any_rotation_of_the_roles_of_the_member_in_last_one_year"><b>Q302.</b> Has there been any rotation of the roles of the member (in last one year)</string>
    <string name="q303_has_there_been_any_election_for_the_office_bearer"><b>Q303.</b> Has there been any election for the office bearer</string>
    <string name="q304_in_what_frequency_the_election_for_office_bearer_happens_in_complete_years"><b>Q304.</b> In what frequency the election for office bearer happens?(in complete years)</string>
    <string name="no_days_month_primary_job"><b>Q406. </b>Number of working days in a month for primary job</string>
    <string name="avg_daily_income_primary_job"><b>Q407. </b>Average daily income from primary source of income (in Rs)</string>
    <string name="secondary_income"><b>Q408. </b>Do you have a secondary source of income?</string>
    <string name="what_secondry_income"><b>Q409. </b>What is your secondary source of income?</string>
    <string name="please_specify_secondry_income"><b>Q409a. </b>Please specify others</string>
    <string name="no_days_secondary_job"><b>Q410. </b>Number of working days in a month for secondary job</string>
    <string name="avg_daily_secondry_income"><b>Q411. </b>Average daily income from secondary source of income (in Rs)</string>
    <string name="have_adhar_card"><b>Q501. </b>Do you have Aadhar Card</string>
    <string name="have_voter_card"><b>Q502. </b>Do you have Voter I-Card</string>
    <string name="have_pan_card"><b>Q503. </b>Do you have PAN Card</string>
    <string name="income_certi"><b>Q504. </b>Do you have Income Certificate</string>
    <string name="caste_certi"><b>Q505. </b>Do you have Caste Certificate</string>
    <string name="svg_bank_act"><b>Q506. </b>Do you have Savings Bank Account</string>
    <string name="availed_services_past"><b>Q507. </b>Have you availed any services/schemes in the past 6 months? (For example, schemes and services related to women empowerment, MSME, subsidy connections, housing, toilet, child education etc.</string>
    <string name="service_provider_department"><b>Q509. </b>Please provide details of service provider/department from where you availed the scheme.</string>
    <string name="avail_any_scheme"><b>Q510. </b>Are you currently availing any scheme/service?</string>
    <string name="details_service_avail"><b>Q511. </b>Please provide details of the service/scheme that you are availing.</string>
    <string name="skills_jobs_picking"><b>Q601. </b>Do you possess any skills for jobs other than waste picking? (Multicheck)</string>
    <string name="please_specify_skill_job"><b>Q209a. </b>Please specify others</string>
    <string name="new_jobs_business"><b>Q602. </b>Are you interested in taking up new job/starting new business?</string>
    <string name="alternative_get_opportunity"><b>Q603. </b>If Yes, what alternative job/business would you like to do if you get an opportunity?</string>
    <string name="member_CIG_SHG"><b>Q701. </b>Are you a member of any collective such as CIG/SHG/JLG/DWCC?</string>
    <string name="name_collective_part"><b>Q702. </b>What is the name of the collective that you are part of?</string>
</resources>